# NLinCPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  abouttests  logger.cpp  logger.hpp  main.cpp  mnistreader.cpp  mnistreader.hpp  mtrx.cpp  mtrx.h  mtrx.hpp
Logger/: CMakeLists.txt
Logger/include/: logger.hpp  loggertime.hpp
Logger/src/: logger.cpp  loggertime.cpp
Logger/test/: test_logger.cpp  test_loggertime.cpp
MTRX/: CMakeLists.txt  mtrx.hpp
MTRX/include/: mtrx.hpp
MTRX/src/: main.cpp  mtrx.cpp
MTRX/test/: test_main.cpp  test_mtrx.cpp
MnistReader/: CMakeLists.txt
MnistReader/include/: mnistreader.hpp
MnistReader/src/: main.cpp  mnistreader.cpp
include/: mnist_reader.h  mtrx.h
src/: main.cpp  mnist_reader.cpp  mtrx.cpp
test/: test_mnist_reader.cpp  test_mtrx.cpp
tests/: test_mtrx.cpp
